# bordplade

./: .gitignore  Makefile  README.md  pyproject.toml
backend/src/: manage.py
backend/src/bordplade/: asgi.py  urls.py  wsgi.py
backend/src/bordplade/settings/: _base.py  dev.py  prod.py
backend/src/bordplade/tests/: test_settings.py
docs/source/: conf.py  index.rst
